# API_broker_alpaca_with_SSE

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  celerybeat-schedule.db  docker-compose.yml  pyproject.toml  start.sh
backend/: settings.py  urls.py
stock_orders/: apps.py  models.py  serializers.py  sse_service.py  tasks.py  urls.py  views.py
stock_orders/management/commands/: start_sse_task.py
stock_orders/migrations/: 0001_initial.py  0002_rename_order_type_stockorder_type.py  0003_alter_stockorder_created_at.py  0004_alter_stockorder_updated_at.py  0005_stockorder_id_order_alter_stockorder_id.py
stock_orders/tests/: test_models.py  test_serializers.py  test_sse_service.py  test_tasks.py  test_views.py
